chore: dockerfile