@@ -6,5 +6,4 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 VOLUME /tmp
 COPY /target/fdk-informationmodel-harvester.jar app.jar
 
-RUN sh -c 'touch /app.jar'
-CMD java -jar -XX:+UseZGC $JAVA_OPTS app.jar
+CMD ["sh", "-c", "java -jar $JAVA_OPTS app.jar"]
